[gd_scene load_steps=19 format=2]

[ext_resource path="res://sound/confirm.wav" type="AudioStream" id=1]
[ext_resource path="res://sound/explosion-2.wav" type="AudioStream" id=2]
[ext_resource path="res://sound/shot-2.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/select.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/hit-2.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/hit-1.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/explosion-1.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/shot-1.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/ufo-6.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/ufo-4.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/ufo-5.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/ufo-2.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/ufo-1.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/ufo-3.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/SoundManager.gd" type="Script" id=15]
[ext_resource path="res://sound/intro.ogg" type="AudioStream" id=16]
[ext_resource path="res://sound/game-over.ogg" type="AudioStream" id=17]
[ext_resource path="res://sound/in-game.ogg" type="AudioStream" id=18]

[node name="SoundManager" type="Node"]
script = ExtResource( 15 )

[node name="Shot1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Shot2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Explosion1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Explosion2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="UFO1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="UFO2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="UFO3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="UFO4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="UFO5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="UFO6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="InGameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
